v_1.32.0-3 - Adiciona a Multibingo no portfolio

=====
v_1.32.0-2 - Reoordena os jogos
Vou parar com isso de colocar os jogos de estudo de game engine mais pra cima no portfolio, vou por eles lá no final rs.
 https://github.com/MarcosRaoi/marcosraoi.github.io/commit/2376c0961e431f47a05a9c91a7122b7df506653f
=====
v_1.32.0-1 - Adiciona o Save the poor princess
Jogo feito no GameMaker Studio 2, a verdade é mais um prototipo, porque não gostei muito da engine, e queria acabar o mais rápido possível. Faltou a mecânica diferente de coletar pedra: Com um clique no momento certo com uma barra em movimento, e a mecânica de coletar tecido: sacudindo o ponteiro do mouse em cima do tecido, com a espada. Faltou toda HUD de ferramentas coletadas e à usar, enfim... Mas se fosse pra eu me estender mais nos assets e no projeto, seria melhor usar a Godot, de boa.

Faltou também passar atravessado / sem colidir, com o Tecido
https://github.com/MarcosRaoi/marcosraoi.github.io/commit/b9c8735f807cff618f7dd53f08b22afe90329f6b
=====
v_1.32.0-0 - ADICIONA O GODOT GAME CELLS EDITOR! :D
aEEEEEE, Aeeee!!! Programinha que eu fiz em Godot para me ajudar a editar as GameCells <3
https://github.com/MarcosRaoi/marcosraoi.github.io/commit/6c51d31d033a591849c2ea0c02506813e01f6961
=====
v_1.31.2-0 - Update game_cells.json
Legal que esse já foi criado pelo: https://github.com/MarcosRaoi/GameCells :D, ele tem valor default pra "target", então como eu não alterei nada ainda no programinha Godot que eu estou criando, só estou testando ele gerar denovo, adicionou target vazio pra todo mundo, já testei, o React não encrenca com isso / o portfolio, já que ele vê se tem valor na str_target, enfim :D Bacana, agora vou criar as funções de Drag and Drop e adicionar jogos no meu programa Godot, e tá feito! :D

Agora só falta automatizar esse release notes em rs.
=====
v_1.31.1-0 - RSrsrsrs ai ai strings :3 